update spacing, add blobs back in, fixed on desktop, ready for mobile

--- a/web/src/styles/pages/pricing.scss
+++ b/web/src/styles/pages/pricing.scss
@@ -141,7 +141,7 @@
     padding: 6.4rem 2.4rem;
 
     @include r(960) {
-        padding: 9.6rem 2.4rem;
+        padding: 12.8rem 2.4rem;
     }
 
     .centered {
@@ -177,7 +177,7 @@
                 max-width: 24rem;
             }
             @include r(960) {
-                max-width: none;
+                max-width: 36rem;
             }
         }
     }
@@ -221,7 +221,7 @@
 .insights {
     background: $darkestGreen url(assets/images/grainy.png);
 
-    /* &:before {
+    &:before {
         background-image: url(assets/images/blob-outline-right.svg), url(assets/images/blob-magenta-right.svg);
         background-position: right bottom, right top;
         background-repeat: no-repeat;
@@ -235,10 +235,12 @@
         width: 300px;
 
         @include r(768) {
-            right: -15rem;
-            top: 25%;
+            background-position: right -12rem bottom 0, right -8rem top 0;
+            height: 47rem;
+            right: -1px;
+            top: 18%;
         }
-    } */
+    }
 
     .sectionGraphic img {
         @include r(768) {
@@ -253,6 +255,20 @@
 
 .coreValues {
     background: $indigo url(assets/images/grainy.png);
+
+    &:before {
+        background-image: url(assets/images/blob-outline.svg), url(assets/images/blob-green.svg);
+        background-position: left -5rem top, left bottom;
+        background-repeat: no-repeat;
+        background-size: 30rem 30.5rem, 28rem 30rem;
+        content: "";
+        display: block;
+        height: 38rem;
+        left: -16rem;
+        position: absolute;
+        bottom: 20%;
+        width: 300px;
+    }
 
     .sectionGraphic {
         margin-bottom: 4.8rem;
